--- a/package.json
+++ b/package.json
@@ -20,17 +20,20 @@
     "build": "tsc",
     "watch-build": "tsc -w",
     "start": "func start",
+    "dev": "concurrently -k -p '[{name}]' -n 'typescript,api' -c 'yellow.bold,cyan.bold' npm:watch-build npm:start",
     "test": "echo 'no tests specified' && exit 1",
     "lint": "tslint --format prose --project .",
     "prettier": "prettier --write src/**",
     "publish:dev": "func azure functionapp publish $PROJECT_NAME-dev --zip",
     "publish": "npm run publish:dev"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^10.11.7",
-		"prettier": "^1.14.3",
+    "azure-functions-ts-essentials": "^1.3.2",
+    "concurrently": "^4.0.1",
+    "nodemon": "^1.18.4",
+    "prettier": "^1.14.3",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-microsoft-contrib": "^5.2.1",
